; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_io.c_io_open_sockets.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_io.c_io_open_sockets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@io_open_sockets.already_opened = internal global i32 0, align 4
@SAVECONFIGQUIT = common dso_local global i32 0, align 4
@NTP_PORT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"io_open_sockets: maxactivefd %d\0A\00", align 1
@maxactivefd = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @io_open_sockets() #0 {
  %1 = load i32, i32* @io_open_sockets.already_opened, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %7, label %3

3:                                                ; preds = %0
  %4 = load i32, i32* @SAVECONFIGQUIT, align 4
  %5 = call i64 @HAVE_OPT(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %3, %0
  br label %18

8:                                                ; preds = %3
  store i32 1, i32* @io_open_sockets.already_opened, align 4
  %9 = call i32 (...) @BLOCKIO()
  %10 = load i32, i32* @NTP_PORT, align 4
  %11 = call i32 @create_sockets(i32 %10)
  %12 = call i32 (...) @UNBLOCKIO()
  %13 = call i32 (...) @init_async_notifications()
  %14 = load i32, i32* @maxactivefd, align 4
  %15 = sext i32 %14 to i64
  %16 = inttoptr i64 %15 to i8*
  %17 = call i32 @DPRINTF(i32 3, i8* %16)
  br label %18

18:                                               ; preds = %8, %7
  ret void
}

declare dso_local i64 @HAVE_OPT(i32) #1

declare dso_local i32 @BLOCKIO(...) #1

declare dso_local i32 @create_sockets(i32) #1

declare dso_local i32 @UNBLOCKIO(...) #1

declare dso_local i32 @init_async_notifications(...) #1

declare dso_local i32 @DPRINTF(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
